src/human_study/program_44/python_err_msg.txt
File "./seq2parse/human_study/program_44/original.py", line 12
    >>> simetrica(m)
    ^^
SyntaxError: invalid syntax
